--- a/HelmWorkShop/traefik-config/traefik-config-update2.yaml
+++ b/HelmWorkShop/traefik-config/traefik-config-update2.yaml
@@ -1,5 +1,6 @@
 # https://rancher.com/docs/k3s/latest/en/helm/#customizing-packaged-components-with-helmchartconfig
 # https://www.leonpahole.com/2020/05/traefik-basic-setup.html
+# https://github.com/traefik/traefik-helm-chart/blob/master/traefik/values.yaml
 apiVersion: helm.cattle.io/v1
 kind: HelmChartConfig
 metadata:
@@ -7,6 +8,8 @@ metadata:
   namespace: kube-system
 spec:
   valuesContent: |-
+    deployment:
+      replicas: 3
     ports:
       web:
         port: 80
