--- a/HelmWorkShop/k8s-dashboard/values-new.yaml
+++ b/HelmWorkShop/k8s-dashboard/values-new.yaml
@@ -1,9 +1,11 @@
 # https://github.com/kubernetes/dashboard/blob/master/aio/deploy/helm-chart/kubernetes-dashboard/values.yaml
 # Additional container arguments
+# replicaCount: 3
+
 extraArgs:
 # https://github.com/kubernetes/dashboard/blob/master/docs/user/access-control/README.md#login-view
   - --enable-skip-login
-  - --system-banner="Welcome to K3S"
+  - --system-banner="Welcome to SoloLab"
 
 ingress:
   ## If true, Kubernetes Dashboard Ingress will be created.
