--- a/HelmWorkShop/traefik/MW-basicauth.yaml
+++ b/HelmWorkShop/traefik/MW-basicauth.yaml
@@ -2,7 +2,7 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
-  name: traefik-basicAuth
+  name: basicauth
   namespace: traefik
   # namespace: kube-system
 spec:
