--- a/HelmWorkShop/traefik/values.yaml
+++ b/HelmWorkShop/traefik/values.yaml
@@ -2,4 +2,33 @@
 
 ports:
   web:
+    # Added in 2.2, you can make permanent redirects via entrypoints.
+    # https://docs.traefik.io/routing/entrypoints/#redirection
     redirectTo: websecure
+  websecure:
+    # Set TLS at the entrypoint
+    # https://doc.traefik.io/traefik/routing/entrypoints/#tls
+    tls:
+      enabled: true
+
+# Configure providers
+#
+providers:
+  kubernetesIngress:
+    # IP used for Kubernetes Ingress endpoints
+    publishedService:
+      enabled: true
+
+additionalArguments:
+  - "--serversTransport.insecureSkipVerify=true"
+
+# Logs
+# https://docs.traefik.io/observability/logs/
+logs:
+  # Traefik logs concern everything that happens to Traefik itself (startup, configuration, events, shutdown, and so on).
+  general:
+    # By default, the logs use a text format (common), but you can
+    # also ask for the json format in the format option
+    # format: json
+    # By default, the level is set to ERROR. Alternative logging levels are DEBUG, PANIC, FATAL, ERROR, WARN, and INFO.
+    level: FATAL
