--- a/HelmWorkShop/dex/RBAC.yaml
+++ b/HelmWorkShop/dex/RBAC.yaml
@@ -4,7 +4,7 @@ metadata:
   name: dex-local-admin
 subjects:
 - kind: User
-  name: dexadmin@solo.lab
+  name: dexadmin@infra.sololab
   apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: ClusterRole
