remove namespace metadata

--- a/HelmWorkShop/kube-vip-cloud-provider/CM-kubevip.yaml
+++ b/HelmWorkShop/kube-vip-cloud-provider/CM-kubevip.yaml
@@ -4,6 +4,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: kubevip
-  namespace: kube-vip
+  # namespace: kube-vip
 data:
   cidr-global: 192.168.255.10/32
