--- a/HelmWorkShop/traefik/values.yaml
+++ b/HelmWorkShop/traefik/values.yaml
@@ -1,5 +1,12 @@
 # https://github.com/traefik/traefik-helm-chart/blob/master/traefik/values.yaml
 
+# Use ingressClass. Ignored if Traefik version < 2.3 / kubernetes < 1.18.x
+ingressClass:
+  # true is not unit-testable yet, pending https://github.com/rancher/helm-unittest/pull/12
+  enabled: true
+  isDefaultClass: true
+  fallbackApiVersion: "v1"
+
 ports:
   web:
     # Added in 2.2, you can make permanent redirects via entrypoints.
@@ -11,13 +18,19 @@ ports:
     tls:
       enabled: true
 
+ingressRoute:
+  dashboard:
+    enabled: false
+
 # Configure providers
 #
+# https://github.com/himynameisjonas/evil-exes/blob/9d9a30ca1881cef49eb0b4de7c222694670a59ae/cluster/apps/networking/traefik/helm-release.yaml
 providers:
   kubernetesIngress:
     # IP used for Kubernetes Ingress endpoints
     publishedService:
       enabled: true
+    ingressClass: traefik
 
 additionalArguments:
   - "--serversTransport.insecureSkipVerify=true"
