--- a/HelmWorkShop/dex/values.yaml
+++ b/HelmWorkShop/dex/values.yaml
@@ -59,6 +59,22 @@ config:
   #           teams:
   #             - your-github-team-name
 
+  # Uncomment this block to enable configuration for the expiration time durations.
+  # Is possible to specify units using only s, m and h suffixes.
+  expiry:
+    deviceRequests: "5m"
+    signingKeys: "6h"
+    idTokens: "24h"
+    refreshTokens:
+      reuseInterval: "3s"
+      validIfNotUsedFor: "2160h" # 90 days
+      absoluteLifetime: "3960h" # 165 days
+
+  # Options for controlling the logger.
+  logger:
+    level: "debug"
+    format: "text"
+
   staticClients:
     - id: kubernetes
       secret: ZXhhbXBsZS1hcHAtc2VjcmV0
