--- a/HelmWorkShop/traefik-dashboard/Ing-traefik-dashboard.yaml
+++ b/HelmWorkShop/traefik-dashboard/Ing-traefik-dashboard.yaml
@@ -2,13 +2,14 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: traefik-ingress
-  namespace: kube-system
+  name: traefik-dashboard
+  namespace: traefik
+  # namespace: kube-system
   annotations:
     kubernetes.io/ingress.class: traefik
 spec:
   rules:
-    - host: solo.lab
+    - host: infra.sololab
       http:
         paths:
           - path: /
