--- a/HelmWorkShop/traefik-dashboard/Svc-traefik-dashboard.yaml
+++ b/HelmWorkShop/traefik-dashboard/Svc-traefik-dashboard.yaml
@@ -3,7 +3,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: traefik-dashboard
-  namespace: kube-system
+  namespace: traefik
+  # namespace: kube-system
   labels:
     app.kubernetes.io/instance: traefik
     app.kubernetes.io/name: traefik-dashboard
