--- a/VagrantWorkShop/InfraSvc-Alpine/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-Alpine/Vagrantfile
@@ -21,7 +21,7 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder "../../HelmWorkShop", "/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
 
   config.ssh.insert_key = false
-
+  
   config.vm.provider "hyperv" do |hv, config|
     # hv.mac = "0000BABEFACE"
     hv.vmname = "InfraSvc-Alpine"
@@ -32,12 +32,27 @@ Vagrant.configure("2") do |config|
     #   trigger.run = {inline: "./Run-Dos2Unix.ps1"}
     # end
   end
+  
+  # install helm
+  # for alpine
+  config.vm.provision "shell", inline: "sudo apk add helm curl"
+  # for others
+  # config.vm.provision "shell", inline: "sudo snap install helm --classic"
+
+  # set static ip for this VM
+  config.vm.provision "file", source: "./interfaces.conf", destination: "/home/vagrant/interfaces"
+  config.vm.provision "shell", inline: "sudo cp /home/vagrant/interfaces /etc/network/interfaces"
+
+  # set dns record for the cluster fqdn
+  config.vm.provision "file", source: "./hosts", destination: "/home/vagrant/hosts"
+  config.vm.provision "shell", inline: "sudo -- sh -c -e 'cat hosts >> /etc/hosts'"
 
   # https://github.com/kurokobo/awx-on-k3s
   # for china
   # https://serverok.in/wget-print-content-to-screen#:~:text=wget%20print%20content%20to%20screen%20wget%20is%20used,this%2C%20you%20can%20replace%20wget%20command%20with%20curl.
   # config.vm.provision "shell", inline: "wget -q -O /dev/stdout http://rancher-mirror.cnrancher.com/k3s/k3s-install.sh | K3S_TOKEN=SECRET INSTALL_K3S_MIRROR=cn INSTALL_K3S_EXEC=\"--cluster-init --write-kubeconfig-mode 644\" sh -"
-  config.vm.provision "shell", inline: "wget -q -O /dev/stdout http://rancher-mirror.cnrancher.com/k3s/k3s-install.sh | INSTALL_K3S_MIRROR=cn INSTALL_K3S_EXEC=\"--write-kubeconfig-mode 644 --write-kubeconfig /home/vagrant/.kube/config\" sh -"
+  # config.vm.provision "shell", inline: "wget -q -O /dev/stdout http://rancher-mirror.cnrancher.com/k3s/k3s-install.sh | INSTALL_K3S_MIRROR=cn INSTALL_K3S_EXEC=\"--write-kubeconfig-mode 644 --write-kubeconfig /home/vagrant/.kube/config\" sh -"
+  
   # for other country
   # config.vm.provision "shell", inline: "wget -q -O /dev/stdout https://get.k3s.io | sh -s - --write-kubeconfig-mode 644"
   
@@ -48,14 +63,11 @@ Vagrant.configure("2") do |config|
   # config.vm.provision "shell", inline: "echo \"export KUBECONFIG=/etc/rancher/k3s/k3s.yaml\" >> ~/.bashrc"
   
   # config.vm.provision "shell", inline: "sudo swapoff -a && sudo rc-update add cgroups default"
-  # install helm
-  # for alpine
-  config.vm.provision "shell", inline: "sudo apk add helm curl"
-  # for others
-  # config.vm.provision "shell", inline: "sudo snap install helm --classic"
-
+  
+  config.vm.provision "shell", inline: "sudo swapoff -a"
+  
   # reboot for alpine
-  # config.vm.provision "shell", inline: "sudo reboot"
+  config.vm.provision "shell", inline: "sudo reboot"
   
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine. In the example below,
