--- a/VagrantWorkShop/InfraSvc-Alpine/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-Alpine/Vagrantfile
@@ -12,16 +12,8 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "alpinelinux315-g2"
+  config.vm.box = "alpinelinux316-g2"
 
-  config.vm.hostname = "InfraSvc-Alpine"
-
-  config.vm.network "private_network", bridge: "Internal Switch"
-
-  config.vm.synced_folder "../../HelmWorkShop", "/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
-
-  config.ssh.insert_key = false
-  
   config.vm.provider "hyperv" do |hv, config|
     # hv.mac = "0000BABEFACE"
     hv.vmname = "InfraSvc-Alpine"
@@ -32,20 +24,31 @@ Vagrant.configure("2") do |config|
     #   trigger.run = {inline: "./Run-Dos2Unix.ps1"}
     # end
   end
+
+  config.vm.network "private_network", bridge: "Internal Switch"
   
-  # install helm
-  # for alpine
-  config.vm.provision "shell", inline: "sudo apk add helm curl"
-  # for others
-  # config.vm.provision "shell", inline: "sudo snap install helm --classic"
+  config.ssh.insert_key = false
+  
+  config.vm.hostname = "InfraSvc-Alpine"
+
+  config.vm.synced_folder "../../HelmWorkShop", "/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
 
   # set static ip for this VM
   config.vm.provision "file", source: "./interfaces.conf", destination: "/home/vagrant/interfaces"
   config.vm.provision "shell", inline: "sudo cp /home/vagrant/interfaces /etc/network/interfaces"
 
+  # install k8s related tools
+  # for alpine
+  config.vm.provision "shell", inline: "sudo apk add helm curl yq"
+  # for others
+  # config.vm.provision "shell", inline: "sudo snap install helm --classic"
+
   # set dns record for the cluster fqdn
-  config.vm.provision "file", source: "./hosts", destination: "/home/vagrant/hosts"
-  config.vm.provision "shell", inline: "sudo -- sh -c -e 'cat hosts >> /etc/hosts'"
+  config.vm.provision "shell", inline: "sudo sed -i '/^127.0.0.1/ s/$/ infra.sololab/' /etc/hosts"
+
+  
+  # reboot for alpine
+  config.vm.provision "shell", reboot: true
 
   # https://github.com/kurokobo/awx-on-k3s
   # for china
@@ -64,11 +67,11 @@ Vagrant.configure("2") do |config|
   
   # config.vm.provision "shell", inline: "sudo swapoff -a && sudo rc-update add cgroups default"
   
-  config.vm.provision "shell", inline: "sudo swapoff -a"
+  # config.vm.provision "shell", inline: "sudo swapoff -a"
   
   # reboot for alpine
-  config.vm.provision "shell", inline: "sudo reboot"
-  
+  # config.vm.provision "shell", reboot: true
+
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine. In the example below,
   # accessing "localhost:8080" will access port 80 on the guest machine.
