--- a/HelmWorkShop/cert-manager/tls-sololab-certman.yaml
+++ b/HelmWorkShop/cert-manager/tls-sololab-certman.yaml
@@ -1,12 +1,12 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: solo.lab
+  name: infra.sololab
   namespace: cert-manager
 spec:
   dnsNames:
-    - solo.lab
-  secretName: solo.lab
+    - infra.sololab
+  secretName: infra.sololab
   issuerRef:
     name: issuer-ca
     kind: ClusterIssuer
