--- a/HelmWorkShop/k8s-dashboard/values.yaml
+++ b/HelmWorkShop/k8s-dashboard/values.yaml
@@ -43,8 +43,8 @@ settings:
   # Hide all access denied warnings in the notification panel
   disableAccessDeniedNotifications: false
 
-metricsScraper:                
-  enabled: true
+# metricsScraper:                
+#   enabled: true
 
 rbac:
   # The basic idea of the clusterReadOnlyRole
