--- a/HelmWorkShop/k8s-dashboard/values-update.yaml
+++ b/HelmWorkShop/k8s-dashboard/values-update.yaml
@@ -48,8 +48,8 @@ settings:
   # Hide all access denied warnings in the notification panel
   disableAccessDeniedNotifications: false
 
-metricsScraper:                
-  enabled: true
+# metricsScraper:                
+#   enabled: true
 
 rbac:
   # The basic idea of the clusterReadOnlyRole
