--- a/VagrantWorkShop/InfraSvc-Alpine/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-Alpine/Vagrantfile
@@ -15,9 +15,8 @@ Vagrant.configure("2") do |config|
   config.vm.box = "alpinelinux316-g2"
 
   config.vm.provider "hyperv" do |hv, config|
-    # hv.mac = "0000BABEFACE"
     hv.vmname = "InfraSvc-Alpine"
-    hv.memory = 1024
+    hv.memory = 2048
     hv.cpus = 2
     # config.trigger.before :'VagrantPlugins::HyperV::Action::StartInstance', type: :action do |trigger|
     #   trigger.info = "Run-Dos2Unix"
@@ -31,7 +30,7 @@ Vagrant.configure("2") do |config|
   
   config.vm.hostname = "InfraSvc-Alpine"
 
-  config.vm.synced_folder "../../HelmWorkShop", "/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
+  config.vm.synced_folder "../../HelmWorkShop", "/var/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
 
   # set static ip for this VM
   config.vm.provision "file", source: "./interfaces.conf", destination: "/home/vagrant/interfaces"
