--- a/VagrantWorkShop/InfraSvc-oSLMicro/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-oSLMicro/Vagrantfile
@@ -17,6 +17,7 @@ Vagrant.configure("2") do |config|
   config.vm.provider "hyperv" do |hv, config|
     # hv.mac = "0000BABEFACE"
     hv.vmname = "InfraSvc-oSLMicro"
+    hv.maxmemory = 2048
     hv.memory = 1024
     hv.cpus = 2
     # config.trigger.before :'VagrantPlugins::HyperV::Action::StartInstance', type: :action do |trigger|
@@ -44,11 +45,12 @@ Vagrant.configure("2") do |config|
 
   # install k8s related tools
   # for suse micro
-  config.vm.provision "shell", inline: "sudo zypper ar -cfg 'https://mirrors.tuna.tsinghua.edu.cn/opensuse/tumbleweed/repo/oss/' tuna-Tumbleweed-oss"
-  config.vm.provision "shell", inline: "sudo zypper ref"
+  config.vm.provision "shell", path: "Add-TumbleweedRepo.sh"
+  # config.vm.provision "shell", inline: "sudo zypper ar -cfg 'https://mirrors.tuna.tsinghua.edu.cn/opensuse/tumbleweed/repo/oss/' tuna-Tumbleweed-oss"
+  # config.vm.provision "shell", inline: "sudo zypper ref"
   # https://documentation.suse.com/sle-micro/5.1/html/SLE-Micro-all/article-administration-slemicro.html#id-1.6.2.4.8.7
-  config.vm.provision "shell", inline: "sudo transactional-update --non-interactive -c pkg in helm"
-  config.vm.provision "shell", inline: "sudo transactional-update --non-interactive -c pkg in apparmor-parser"
+  # config.vm.provision "shell", inline: "sudo transactional-update --non-interactive -c pkg in helm"
+  # config.vm.provision "shell", inline: "sudo transactional-update --non-interactive -c pkg in apparmor-parser"
   
   # for others
   # config.vm.provision "shell", inline: "sudo snap install helm --classic"
