--- a/HelmWorkShop/powerdns/Ing-pdns.yaml
+++ b/HelmWorkShop/powerdns/Ing-pdns.yaml
@@ -7,7 +7,7 @@ metadata:
   # namespace: kube-system
   annotations:
     kubernetes.io/ingress.class: traefik
-    cert-manager.io/cluster-issuer: issuer-ca
+    cert-manager.io/cluster-issuer: ca-issuer
     traefik.ingress.kubernetes.io/router.middlewares: traefik-subpath-stripprefixregex@kubernetescrd
 spec:
   rules:
