--- a/HelmWorkShop/cert-manager/tls-infra.sololab-traefik.yaml
+++ b/HelmWorkShop/cert-manager/tls-infra.sololab-traefik.yaml
@@ -9,5 +9,5 @@ spec:
     - infra.sololab
   secretName: infra.sololab
   issuerRef:
-    name: issuer-ca
+    name: ca-issuer
     kind: ClusterIssuer
