--- a/HelmWorkShop/cert-manager/tls-sololab-certman.yaml
+++ b/HelmWorkShop/cert-manager/tls-sololab-certman.yaml
@@ -8,5 +8,5 @@ spec:
     - infra.sololab
   secretName: infra.sololab
   issuerRef:
-    name: issuer-ca
+    name: ca-issuer
     kind: ClusterIssuer
