--- a/HelmWorkShop/charts/powerdns-webui/values.yaml
+++ b/HelmWorkShop/charts/powerdns-webui/values.yaml
@@ -55,7 +55,7 @@ ingress:
   annotations:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-    cert-manager.io/cluster-issuer: issuer-ca
+    cert-manager.io/cluster-issuer: ca-issuer
     traefik.ingress.kubernetes.io/router.middlewares: traefik-subpath-stripprefixregex@kubernetescrd
   hosts:
     - host: infra.sololab
