--- a/HelmWorkShop/harbor/values.yaml
+++ b/HelmWorkShop/harbor/values.yaml
@@ -4,7 +4,7 @@ expose:
       core: core.harbor.lab
       notary: notary.harbor.lab
     annotations:
-      cert-manager.io/cluster-issuer: issuer-ca
+      cert-manager.io/cluster-issuer: ca-issuer
       kubernetes.io/ingress.class: traefik
       traefik.ingress.kubernetes.io/router.entrypoints: websecure
       traefik.ingress.kubernetes.io/router.tls: "true"
