--- a/HelmWorkShop/kubeview/values.yaml
+++ b/HelmWorkShop/kubeview/values.yaml
@@ -6,7 +6,7 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: traefik
   #  kubernetes.io/tls-acme: true
-    # cert-manager.io/cluster-issuer: issuer-ca
+    # cert-manager.io/cluster-issuer: ca-issuer
     # traefik.ingress.kubernetes.io/router.middlewares: traefik-subpath-stripprefixregex@kubernetescrd
   hosts:
     # - host: kubeview.infra.sololab
