--- a/HelmWorkShop/longhorn/values.yaml
+++ b/HelmWorkShop/longhorn/values.yaml
@@ -34,5 +34,5 @@ ingress:
   annotations:
   #  kubernetes.io/ingress.class: nginx
   #  kubernetes.io/tls-acme: true
-    cert-manager.io/cluster-issuer: issuer-ca
+    cert-manager.io/cluster-issuer: ca-issuer
     traefik.ingress.kubernetes.io/router.middlewares: traefik-subpath-stripprefixregex@kubernetescrd
