--- a/HelmWorkShop/traefik/extra-raw-values.yaml
+++ b/HelmWorkShop/traefik/extra-raw-values.yaml
@@ -29,7 +29,7 @@ resources:
         - infra.sololab
       secretName: infra.sololab
       issuerRef:
-        name: issuer-ca
+        name: ca-issuer
         kind: ClusterIssuer
 
     # https://github.com/traefik/traefik-helm-chart/tree/master/traefik
