--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "ms-vscode-remote.remote-ssh-edit"
+        "ms-vscode-remote.remote-ssh-edit",
+        "eamodio.gitlens"
     ]
 }
