--- a/HelmWorkShop/charts/powerdns/values.yaml
+++ b/HelmWorkShop/charts/powerdns/values.yaml
@@ -2,59 +2,27 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+powerdns:
+  api:
+    key: PowerDNSAPI
+  additionalArgs: 
+    - "--allow-dnsupdate-from=0.0.0.0/0"
+  initDomains: []
+
+
 replicaCount: 1
 
 image:
-  repository: nginx
+  # repository: psitrax/powerdns
+  repository: interlegis/powerdns:4.4.0
+  # leave tag blank to use app version
+  tag:
   pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
-
-imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
-
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
-
-podAnnotations: {}
-
-podSecurityContext: {}
-  # fsGroup: 2000
-
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
 
 service:
   type: ClusterIP
-  port: 80
-
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  # annotations: {}
+  # ip
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -62,21 +30,40 @@ resources: {}
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
+  #  cpu: 100m
+  #  memory: 128Mi
   # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
+  #  cpu: 100m
+  #  memory: 128Mi
 
 nodeSelector: {}
 
 tolerations: []
 
 affinity: {}
+
+##
+## MariaDB chart configuration
+##
+mariadb:
+  enabled: true
+
+  rootUser:
+    password: 
+
+  db:
+    ## MariaDB username and password
+    user: powerdns
+    password: powerdns
+    ## Database to create
+    name: powerdns
+
+  replication:
+    enabled: false
+
+  master:
+    persistence:
+      enabled: false
+
+  tests:
+    enabled: false
